--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -72,6 +72,14 @@
 	"rightbar-color-red": "Red overlay", 
 	"rightbar-color-green": "Green overlay", 
 	"rightbar-color-blue": "Blue overlay", 
+	"rightbar-color-blend": "Blend", 
+	"rightbar-color-blnormal": "normal", 
+	"rightbar-color-bladd": "add", 
+	"rightbar-color-bldifference": "difference", 
+	"rightbar-color-blinvert": "invert", 
+	"rightbar-color-blmultiply": "multiply", 
+	"rightbar-color-blscreen": "screen", 
+	"rightbar-color-blsubtract": "subtract", 
 	
 	"rightbar-sound-volume": "Volume", 
 	"rightbar-sound-pan": "Pan", 
@@ -97,11 +105,17 @@
 	"rightbar-filter-dsdistance": "Distance",
 	"rightbar-filter-dsangle": "Angle",
 	"rightbar-filter-dscolor": "Color",
-	"rightbar-filter-dsalpha": "Alpha",
+	"rightbar-filter-dsalpha": "Opacity",
 	"rightbar-filter-dsblurx": "Horizontal blur",
 	"rightbar-filter-dsblury": "Vertical blur",
 	"rightbar-filter-dsstrength": "Strength",
 	"rightbar-filter-dsinner": "Inner shadow?",
+	"rightbar-filter-glow": "Border",
+	"rightbar-filter-glcolor": "Color",
+	"rightbar-filter-glblur": "Blur",
+	"rightbar-filter-glstrength": "Strength",
+	"rightbar-filter-glinner": "Inner border?",
+	"rightbar-filter-glalpha": "Opacity",
 	
 	"rightbar-media-name": "Name",
 	"rightbar-media-collection": "Collection",
@@ -621,7 +635,7 @@
 	"menu-keyframe-addok": "New keyframe add.", 
 	
 	"menu-contraptions-title": "Contraptions", 
-	"menu-contraptions-menus": "Menus", 
+	"menu-contraptions-menus": "Menu layouts", 
 	"menu-contraptions-dialogues": "Dialogues", 
 	
 	"window-kfmanage-title": "Scene keyframes",
@@ -633,14 +647,29 @@
 	"window-kfmanage-actions": "Set end actions",
 	"window-kfmanage-onlyone": "The scene must have at least one keyframe.",
 	
-	"window-contrmenu-title": "Menus",
-	"window-contrmenu-registered": "Registered menus",
-	"window-contrmenu-properties": "Menu properties",
-	"window-contrmenu-load": "Load menu",
-	"window-contrmenu-remove": "Remove menu",
-	"window-contrmenu-save": "Save menu settings",
-	"window-contrmenu-name": "Menu name",
+	"window-contrmenu-title": "Menu layouts",
+	"window-contrmenu-registered": "Registered menu layouts",
+	"window-contrmenu-properties": "Layout properties",
+	"window-contrmenu-load": "Load layout",
+	"window-contrmenu-remove": "Remove layout",
+	"window-contrmenu-save": "Save current menu layout settings",
+	"window-contrmenu-name": "Layout name",
 	"window-contrmenu-font": "Text font",
+	"window-contrmenu-fontc": "Font color",
+	"window-contrmenu-cover": "Cover color",
+	"window-contrmenu-coveralpha": "Cover opacity",
+	"window-contrmenu-mode": "Menu mode",
+	"window-contrmenu-modev": "vertical",
+	"window-contrmenu-modeh": "horizontal",
+	"window-contrmenu-imgbg": "Background image",
+	"window-contrmenu-imgbt": "Button image",
+	"window-contrmenu-imgsl": "Selected button image",
+	"window-contrmenu-add": "Add/update menu layout",
+	"window-contrmenu-noname": "You must give the menu layout a name with at least 3 characters.",
+	"window-contrmenu-nographics": "You must set the images for the menu background and for the buttons.",
+	"window-contrmenu-ersave": "Error while saving the menu layouts. Please try again.",
+	"window-contrmenu-ersave1": "Your access level doesn't allow setting the menu layouts.",
+	"window-contrmenu-oksave": "The menu layots were saved.",
 	
 	"menu-media-title": "Media", 
 	"menu-media-collectionsadd": "Add from collection", 
@@ -1131,6 +1160,7 @@
 	"acblock-cancel": "on cancel", 
 	"acblock-success": "on success", 
 	"acblock-error": "on error", 
+	"acblock-select": "when selected", 
 	"acblock-button": "Set action block", 
 	"acblock-valcopy": "Retrieved value", 
 	"acblock-errortitle": "Action block setting", 
@@ -1141,6 +1171,27 @@
 	"acblock-parambool": " must be a boolean value.", 
 	"acblock-paramstring": " must be a string value.", 
 	"acblock-paramvariable": " must be a variable name starting with $, # or ?.", 
+	
+	"window-acbcontraptions-title": "Contraptions", 
+	"acinfo-showmenu": "show menu", 
+	"acinfo-showmenu-p1": "menu layout name", 
+	"acinfo-showmenu-p2": "menu options (split by ;)", 
+	"acinfo-showmenu-p3": "integer variable to receive value", 
+	"acinfo-showmenu-p4": "position", 
+	"acinfo-showmenu-p5": "x distance from border or position", 
+	"acinfo-showmenu-p6": "y distance from border or position", 
+	"acinfo-hidemenu": "hide menus", 
+	
+	"placement-top": "top", 
+	"placement-topleft": "top left", 
+	"placement-topright": "top right", 
+	"placement-center": "center", 
+	"placement-centerleft": "center left",
+	"placement-centerright": "center right",
+	"placement-bottom": "bottom", 
+	"placement-bottomleft": "bottom left",
+	"placement-bottomright": "bottom right",
+	"placement-absolute": "absolute position",
 	
 	"window-acbmovie-title": "Movie and scene handling", 
 	"acinfo-movieload": "load a movie", 
@@ -1693,6 +1744,7 @@
 	"tooltip-movie-nolevel": "your access level doesn't allow movie handling", 
 	"tooltip-movie-noowner": "you are not the owner of the current movie", 
 	"tooltip-movie-nomovie": "no movie loaded", 
+	"tooltip-movie-nomovieaccess": "no movie loaded or no access level", 
 	"tooltip-movie-noscene": "no scene loaded", 
 	"tooltip-movie-nomovieowner": "no movie open or you are not the owner of the current one", 
 	"tooltip-action-bldel": "remove selected action block", 
