--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -44,6 +44,7 @@
 	"rightbar-instances-randcheck": "Are you sure you want to randomize all current instance names? If there is a selected instance, its name won't be changed.", 
 	
 	"rightbar-action-trigger": "Trigger actions", 
+	"rightbar-action-over": "Mouse over actions", 
 	
 	"rightbar-history-original": "original",
 	"rightbar-history-instance": "instance properties",
@@ -55,6 +56,7 @@
 	"rightbar-history-sound": "sound",
 	"rightbar-history-filters": "filters",
 	"rightbar-history-actrigger": "trigger action",
+	"rightbar-history-acover": "mouse over action",
 	"rightbar-history-removeinst": "instance removed",
 	
 	"rightbar-properties-px": "X position", 
@@ -63,6 +65,7 @@
 	"rightbar-properties-height": "Height", 
 	"rightbar-properties-awidth": "Adjust width", 
 	"rightbar-properties-aheight": "Adjust height", 
+	"rightbar-properties-soriginal": "Use original size", 
 	"rightbar-properties-order": "Order", 
 	"rightbar-properties-visible": "Visible", 
 	"rightbar-properties-rotation": "Rotation (experimental)", 
@@ -209,8 +212,9 @@
 	"window-movieprop-imageclear": "Clear",
 	"window-movieprop-id": "Movie ID (can't change)", 
 	"window-movieprop-saveabout": "Save descriptions", 
-	"window-movieprop-animation": "Animation", 
-	"window-movieprop-origin": "Images origin", 
+	"window-movieprop-animation": "Animation & interaction", 
+	"window-movieprop-origin": "Images appear animation", 
+	"window-movieprop-ornone": "None", 
 	"window-movieprop-oralpha": "Alpha", 
 	"window-movieprop-orcenter": "Center", 
 	"window-movieprop-ortop": "From top", 
@@ -223,7 +227,10 @@
 	"window-movieprop-orrightkeep": "From right (keep layout)", 
 	"window-movieprop-interpolation": "Interpolation", 
 	"window-movieprop-highlight": "Mouse over highlight color (use hex 0x000000 or #000000 format - leave blank to hide highlight)", 
-	"window-movieprop-saveanim": "Save animation settings", 
+	"window-movieprop-loading": "Loading anmation (will display while loading scene data)", 
+	"window-movieprop-loadingset": "Select",
+	"window-movieprop-loadingclear": "Clear",
+	"window-movieprop-saveanim": "Save animation & interaction settings", 
 	"window-movieprop-display": "Display", 
 	"window-movieprop-bgcolor": "Background color (hex)", 
 	"window-movieprop-savedisplay": "Save display settings*", 
@@ -458,6 +465,7 @@
 	"window-globals-get": "get value", 
 	"window-globals-playing": "is the movie playing right now?", 
 	"window-globals-userlogged": "is there an user logged?", 
+	"window-globals-hadinteraction": "has the visitor ever clicked?", 
 	"window-globals-server": "is there a server connection?", 
 	"window-globals-keyframe": "current keyframe number", 
 	"window-globals-areabig": "movie big dimension", 
@@ -527,6 +535,7 @@
 	"window-acinstance-next": "next", 
 	"window-acinstance-previous": "previous", 
 	"window-acinstance-seek": "seek", 
+	"window-acinstance-zoom": "zoom", 
 	"window-acinstance-scrollbottom": "scroll text to bottom", 
 	"window-acinstance-scrolltop": "scroll text to top", 
 	"window-acinstance-scrolldown": "scroll text down", 
@@ -1500,6 +1509,8 @@
 	"acinfo-instancescrollbottom-p1": "the instance name", 
 	"acinfo-instancescrolltop": "scroll instance text to up", 
 	"acinfo-instancescrolltop-p1": "the instance name", 
+	"acinfo-instancezoom": "zoom instance content (picture or video)", 
+	"acinfo-instancezoom-p1": "the instance name", 
 	"acinfo-instanceseek": "jump instance playback to a time position", 
 	"acinfo-instanceseek-p1": "the instance name", 
 	"acinfo-instanceseek-p2": "the time (in seconds)", 
