--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -68,7 +68,7 @@
 	"rightbar-properties-soriginal": "Use original size", 
 	"rightbar-properties-order": "Order", 
 	"rightbar-properties-visible": "Visible", 
-	"rightbar-properties-rotation": "Rotation (experimental)", 
+	"rightbar-properties-rotation": "Rotation", 
 	
 	"rightbar-color-alpha": "Opacity", 
 	"rightbar-color-alphacolor": "Overlay level", 
@@ -1559,7 +1559,7 @@
 	"acinfo-instancesetparagraph": "change instance paragraph text", 
 	"acinfo-instancesetparagraph-p1": "the instance name", 
 	"acinfo-instancesetparagraph-p2": "the text to use", 
-	"acinfo-instancesetrotation": "change instance rotation (experimental)", 
+	"acinfo-instancesetrotation": "change instance rotation", 
 	"acinfo-instancesetrotation-p1": "the instance name", 
 	"acinfo-instancesetrotation-p2": "the angle (0 to 359)", 
 	"acinfo-instancesetvisible": "set instance visibility", 
