--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -1,6 +1,7 @@
 {
 	"default-ok": "Ok", 
 	"default-cancel": "Cancel", 
+	"default-set": "Set", 
 	"default-wait": "Please wait...", 
 	"default-serverconerror": "Error while accessing the server. Please try again.", 
 	"default-dateformat": "Y/m/d H:i", 
@@ -122,11 +123,14 @@
 	
 	"rightbar-media-name": "Name",
 	"rightbar-media-collection": "Collection",
+	"rightbar-media-collectioned": "Edit collection",
 	"rightbar-media-asset": "Asset",
+	"rightbar-media-asseted": "Edit asset", 
 	"rightbar-media-update": "Update",
 	"rightbar-media-cache": "Set as precache",
 	"rightbar-media-remove": "Remove",
 	"rightbar-media-removecheck": "Are you sure you want to remove this instance?",
+	"rightbar-media-precachecheck": "Are you sure you want to set the instance as a precache?",
 	"rightbar-media-playonload": "Start playing",
 	"rightbar-media-noid": "You must provide a name with at least 3 characters for the instance.",
 	"rightbar-media-idtaken": "The name given is already taken by another instance.",
@@ -671,6 +675,31 @@
 	"window-kfmanage-actions": "Set end actions",
 	"window-kfmanage-onlyone": "The scene must have at least one keyframe.",
 	
+	"window-collectionbasic-title": "Collection properties", 
+	"window-collectionbasic-name": "Name", 
+	"window-collectionbasic-assettime": "Assets total time in seconds", 
+	"window-collectionbasic-assettimeset": "Set all assets time (except videos and audios)", 
+	"window-collectionbasic-astac": "Assets playback finish behavior", 
+	"window-collectionbasic-astacset": "Set all assets playback finish behavior", 
+	"window-collectionbasic-save": "Apply collection changes", 
+	"window-collectionbasic-cancel": "Close without changing", 
+	"window-collectionbasic-timeapply": "Do you really want to change all assets total time?", 
+	"window-collectionbasic-actionapply": "Do you really want to change all assets playback finish behavior?", 
+	"window-collectionbasic-colapply": "Do you really want to update the collection?", 
+	
+	
+	"window-asset-title": "Asset properties",
+	"window-asset-name": "Name",
+	"window-asset-noinstance": "No instance selected.",
+	"window-asset-nocollection": "No collection data found.", 
+	"window-asset-noasset": "No asset data found.", 
+	"window-asset-file": "File", 
+	"window-asset-shape": "Set shape", 
+	"window-asset-spritemap": "Set spritemap", 
+	"window-asset-text": "Set text", 
+	"window-asset-btok": "Update asset", 
+	"window-asset-btcancel": "Close without changing", 
+	
 	"window-contrmenu-title": "Menu layouts",
 	"window-contrmenu-registered": "Registered menu layouts",
 	"window-contrmenu-properties": "Layout properties",
@@ -869,14 +898,14 @@
 	"window-collection-assetadd2": "Add an asset to selected collection",
 	"window-collection-assetstage": "Apply all changes and add selected asset to stage",
 	"window-collection-assetstagenew": "Add selected asset to stage",
-	"window-collection-astnameer": "The asset name must contain at least 3 chars.", 
+	"window-collection-astnameer": "The asset name must contain at least 5 chars.", 
 	"window-collection-asttimeer": "The asset loop time must be at least 1 second.", 
 	"window-collection-astframeser": "The number of spritemap frames must be at least 1.", 
 	"window-collection-astfrtimeser": "The spritemap frame time must be at least 50 miliseconds.", 
 	"window-collection-astfileser": "All asset files (@1 to @5) must be set.", 
 	"window-collection-exitapply": "Apply changes to current collections",
 	"window-collection-exitno": "Close without applying changes",
-	"window-collection-colnameer": "The collection name must contain at least 3 chars.", 
+	"window-collection-colnameer": "The collection name must contain at least 5 chars.", 
 	"window-collection-colapplyok": "The current collections will be updated. Are you sure?",
 	"window-collection-colapplyno": "You made changes to the collections. Really exit without apllying them?",
 	"window-collection-astonlyone": "You can't remove all the colleciton assets.",
