--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -46,6 +46,7 @@
 	
 	"rightbar-action-trigger": "Trigger actions", 
 	"rightbar-action-over": "Mouse over actions", 
+	"rightbar-action-timed": "Timed actions", 
 	
 	"rightbar-history-original": "original",
 	"rightbar-history-instance": "instance properties",
@@ -687,6 +688,16 @@
 	"window-collectionbasic-actionapply": "Do you really want to change all assets playback finish behavior?", 
 	"window-collectionbasic-colapply": "Do you really want to update the collection?", 
 	
+	"window-timedac-title": "Timed actions", 
+	"window-timedac-registered": "Registered actions for instance", 
+	"window-timedac-actions": "Actions", 
+	"window-timedac-newtime": "New timed action (seconds)", 
+	"window-timedac-newtimebt": "Add action for selected time", 
+	"window-timedac-loadac": "Load selected action", 
+	"window-timedac-clearac": "Clear selected action", 
+	"window-timedac-set": "Apply timed actions chanmges to instance", 
+	"window-timedac-close": "Close without changing", 
+	"window-timedac-update": "Update current time", 
 	
 	"window-asset-title": "Asset properties",
 	"window-asset-name": "Name",
@@ -742,6 +753,7 @@
 	"menu-exhange-title": "Exchange data", 
 	"menu-exchange-export": "Export current movie", 
 	"menu-exchange-site": "Export as website", 
+	"menu-exchange-iframe": "Iframe for site embed", 
 	"menu-exchange-pwa": "Save PWA application", 
 	"menu-exchange-publish": "Save for publish services\n(itch.io, Game Jolt, etc)", 
 	"menu-exchange-desktop": "Export for desktop\nWindows, Linux or macOS", 
@@ -780,11 +792,21 @@
 	"window-exchsite-dom": "HTML DOM",
 	"window-exchsite-sitemap": "Create a sitemap? If you want to create a sitemap file for your website, indicate the address from where it will be accessed. The provided address will be automatically add to the enabled CORS list.",
 	"window-exchsite-error": "Error while exporting your website.", 
-	"window-exchsite-ok": "Your website was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TilBuci installation server.", 
+	"window-exchsite-ok": "Your website was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TilBuci installation server.", 
 	"window-exchsite-location": "Export to",
 	"window-exchsite-locsite": "/sites folder",
 	"window-exchsite-loczip": "zip file",
 	"window-exchsite-siteok": "Your website was exported. You can access it at [URL].", 
+	
+	"window-exchiframe-title": "Export movie for iframe embed on sites",
+	"window-exchiframe-about": "You can export your movie to embed it on websites using iframes. TilBuci will either save your content at the /sites folder of your installation or create a ZIP file with all necessary files, including an iframe.html embed example one. Just link to the the exported URL or unzip all files into a folder of your site and you're ready to go! Notice that features that require server interaction won't be available from the exported ZIP content unless the site URL is add to the CORS list of this installation visitors setup. While exporting, plase be patient since the process may take some time for larger movies.",
+	"window-exchiframe-location": "Export to",
+	"window-exchiframe-locsite": "/sites folder",
+	"window-exchiframe-loczip": "zip file",
+	"window-exchiframe-button": "Export content for iframe embed",
+	"window-exchiframe-error": "Error while exporting your movie.", 
+	"window-exchiframe-ok": "The iframe content was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TilBuci installation server.", 
+	"window-exchiframe-siteok": "Your content was exported. You can embed it using [URL].", 
 	
 	"window-exchpwa-title": "Export movie as a PWA application",
 	"window-exchpwa-about": "To export your movie as a Progressive Web Application, inform all the fields of current window and click the export button. TilBuci will either save it at the /pwa folder of your installation or create a zip file that you must uncompress into your webserver. Remember that the site must run from HTTPS to enable the PWA features. You can set the favicon image at the movie properties window - you MUST use a 512x512 pixels PNG file. The PWA export process may take some time. After that the download will start automatically. If you are updating a previously exported PWA app, just override the previous content with the newly exported one.",
