--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -1,6 +1,7 @@
 {
 	"default-ok": "Ok", 
 	"default-cancel": "Cancel", 
+	"default-set": "Set", 
 	"default-wait": "Please wait...", 
 	"default-serverconerror": "Error while accessing the server. Please try again.", 
 	"default-dateformat": "Y/m/d H:i", 
@@ -45,6 +46,7 @@
 	
 	"rightbar-action-trigger": "Trigger actions", 
 	"rightbar-action-over": "Mouse over actions", 
+	"rightbar-action-timed": "Timed actions", 
 	
 	"rightbar-history-original": "original",
 	"rightbar-history-instance": "instance properties",
@@ -68,7 +70,7 @@
 	"rightbar-properties-soriginal": "Use original size", 
 	"rightbar-properties-order": "Order", 
 	"rightbar-properties-visible": "Visible", 
-	"rightbar-properties-rotation": "Rotation (experimental)", 
+	"rightbar-properties-rotation": "Rotation", 
 	
 	"rightbar-color-alpha": "Opacity", 
 	"rightbar-color-alphacolor": "Overlay level", 
@@ -122,11 +124,14 @@
 	
 	"rightbar-media-name": "Name",
 	"rightbar-media-collection": "Collection",
+	"rightbar-media-collectioned": "Edit collection",
 	"rightbar-media-asset": "Asset",
+	"rightbar-media-asseted": "Edit asset", 
 	"rightbar-media-update": "Update",
 	"rightbar-media-cache": "Set as precache",
 	"rightbar-media-remove": "Remove",
 	"rightbar-media-removecheck": "Are you sure you want to remove this instance?",
+	"rightbar-media-precachecheck": "Are you sure you want to set the instance as a precache?",
 	"rightbar-media-playonload": "Start playing",
 	"rightbar-media-noid": "You must provide a name with at least 3 characters for the instance.",
 	"rightbar-media-idtaken": "The name given is already taken by another instance.",
@@ -671,6 +676,41 @@
 	"window-kfmanage-actions": "Set end actions",
 	"window-kfmanage-onlyone": "The scene must have at least one keyframe.",
 	
+	"window-collectionbasic-title": "Collection properties", 
+	"window-collectionbasic-name": "Name", 
+	"window-collectionbasic-assettime": "Assets total time in seconds", 
+	"window-collectionbasic-assettimeset": "Set all assets time (except videos and audios)", 
+	"window-collectionbasic-astac": "Assets playback finish behavior", 
+	"window-collectionbasic-astacset": "Set all assets playback finish behavior", 
+	"window-collectionbasic-save": "Apply collection changes", 
+	"window-collectionbasic-cancel": "Close without changing", 
+	"window-collectionbasic-timeapply": "Do you really want to change all assets total time?", 
+	"window-collectionbasic-actionapply": "Do you really want to change all assets playback finish behavior?", 
+	"window-collectionbasic-colapply": "Do you really want to update the collection?", 
+	
+	"window-timedac-title": "Timed actions", 
+	"window-timedac-registered": "Registered actions for instance", 
+	"window-timedac-actions": "Actions", 
+	"window-timedac-newtime": "New timed action (seconds)", 
+	"window-timedac-newtimebt": "Add action for selected time", 
+	"window-timedac-loadac": "Load selected action", 
+	"window-timedac-clearac": "Clear selected action", 
+	"window-timedac-set": "Apply timed actions chanmges to instance", 
+	"window-timedac-close": "Close without changing", 
+	"window-timedac-update": "Update current time", 
+	
+	"window-asset-title": "Asset properties",
+	"window-asset-name": "Name",
+	"window-asset-noinstance": "No instance selected.",
+	"window-asset-nocollection": "No collection data found.", 
+	"window-asset-noasset": "No asset data found.", 
+	"window-asset-file": "File", 
+	"window-asset-shape": "Set shape", 
+	"window-asset-spritemap": "Set spritemap", 
+	"window-asset-text": "Set text", 
+	"window-asset-btok": "Update asset", 
+	"window-asset-btcancel": "Close without changing", 
+	
 	"window-contrmenu-title": "Menu layouts",
 	"window-contrmenu-registered": "Registered menu layouts",
 	"window-contrmenu-properties": "Layout properties",
@@ -713,6 +753,7 @@
 	"menu-exhange-title": "Exchange data", 
 	"menu-exchange-export": "Export current movie", 
 	"menu-exchange-site": "Export as website", 
+	"menu-exchange-iframe": "Iframe for site embed", 
 	"menu-exchange-pwa": "Save PWA application", 
 	"menu-exchange-publish": "Save for publish services\n(itch.io, Game Jolt, etc)", 
 	"menu-exchange-desktop": "Export for desktop\nWindows, Linux or macOS", 
@@ -751,11 +792,21 @@
 	"window-exchsite-dom": "HTML DOM",
 	"window-exchsite-sitemap": "Create a sitemap? If you want to create a sitemap file for your website, indicate the address from where it will be accessed. The provided address will be automatically add to the enabled CORS list.",
 	"window-exchsite-error": "Error while exporting your website.", 
-	"window-exchsite-ok": "Your website was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TilBuci installation server.", 
+	"window-exchsite-ok": "Your website was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TilBuci installation server.", 
 	"window-exchsite-location": "Export to",
 	"window-exchsite-locsite": "/sites folder",
 	"window-exchsite-loczip": "zip file",
 	"window-exchsite-siteok": "Your website was exported. You can access it at [URL].", 
+	
+	"window-exchiframe-title": "Export movie for iframe embed on sites",
+	"window-exchiframe-about": "You can export your movie to embed it on websites using iframes. TilBuci will either save your content at the /sites folder of your installation or create a ZIP file with all necessary files, including an iframe.html embed example one. Just link to the the exported URL or unzip all files into a folder of your site and you're ready to go! Notice that features that require server interaction won't be available from the exported ZIP content unless the site URL is add to the CORS list of this installation visitors setup. While exporting, plase be patient since the process may take some time for larger movies.",
+	"window-exchiframe-location": "Export to",
+	"window-exchiframe-locsite": "/sites folder",
+	"window-exchiframe-loczip": "zip file",
+	"window-exchiframe-button": "Export content for iframe embed",
+	"window-exchiframe-error": "Error while exporting your movie.", 
+	"window-exchiframe-ok": "The iframe content was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TilBuci installation server.", 
+	"window-exchiframe-siteok": "Your content was exported. You can embed it using [URL].", 
 	
 	"window-exchpwa-title": "Export movie as a PWA application",
 	"window-exchpwa-about": "To export your movie as a Progressive Web Application, inform all the fields of current window and click the export button. TilBuci will either save it at the /pwa folder of your installation or create a zip file that you must uncompress into your webserver. Remember that the site must run from HTTPS to enable the PWA features. You can set the favicon image at the movie properties window - you MUST use a 512x512 pixels PNG file. The PWA export process may take some time. After that the download will start automatically. If you are updating a previously exported PWA app, just override the previous content with the newly exported one.",
@@ -869,14 +920,14 @@
 	"window-collection-assetadd2": "Add an asset to selected collection",
 	"window-collection-assetstage": "Apply all changes and add selected asset to stage",
 	"window-collection-assetstagenew": "Add selected asset to stage",
-	"window-collection-astnameer": "The asset name must contain at least 3 chars.", 
+	"window-collection-astnameer": "The asset name must contain at least 5 chars.", 
 	"window-collection-asttimeer": "The asset loop time must be at least 1 second.", 
 	"window-collection-astframeser": "The number of spritemap frames must be at least 1.", 
 	"window-collection-astfrtimeser": "The spritemap frame time must be at least 50 miliseconds.", 
 	"window-collection-astfileser": "All asset files (@1 to @5) must be set.", 
 	"window-collection-exitapply": "Apply changes to current collections",
 	"window-collection-exitno": "Close without applying changes",
-	"window-collection-colnameer": "The collection name must contain at least 3 chars.", 
+	"window-collection-colnameer": "The collection name must contain at least 5 chars.", 
 	"window-collection-colapplyok": "The current collections will be updated. Are you sure?",
 	"window-collection-colapplyno": "You made changes to the collections. Really exit without apllying them?",
 	"window-collection-astonlyone": "You can't remove all the colleciton assets.",
@@ -1559,7 +1610,7 @@
 	"acinfo-instancesetparagraph": "change instance paragraph text", 
 	"acinfo-instancesetparagraph-p1": "the instance name", 
 	"acinfo-instancesetparagraph-p2": "the text to use", 
-	"acinfo-instancesetrotation": "change instance rotation (experimental)", 
+	"acinfo-instancesetrotation": "change instance rotation", 
 	"acinfo-instancesetrotation-p1": "the instance name", 
 	"acinfo-instancesetrotation-p2": "the angle (0 to 359)", 
 	"acinfo-instancesetvisible": "set instance visibility", 
