--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -495,6 +495,15 @@
 	"window-globals-runtime": "current runtime", 
 	"window-globals-wsserver": "webservice url", 
 	"window-globals-version": "TilBuci version", 
+	"window-globals-session": "unique session ID", 
+	"window-globals-date": "curren date (Y-M-D)", 
+	"window-globals-time": "current time (H:M:S)", 
+	"window-globals-year": "current year", 
+	"window-globals-month": "current month", 
+	"window-globals-day": "current month day", 
+	"window-globals-hour": "current hour (24h format)", 
+	"window-globals-minute": "current minutes", 
+	"window-globals-second": "current seconds", 
 	
 	"window-acscene-title": "Scene and movie actions", 
 	"window-acscene-list": "Current movie scenes", 
@@ -878,6 +887,12 @@
 	"window-media-nolist": "Error while loading the files list. Please try again.",
 	"window-media-openfolder": "Open folder",
 	"window-media-addstage": "Add to the stage",
+	"window-media-addcolast": "Add to collection",
+	"window-media-addtocol": "Add to collection and stage",
+	"window-media-colname": "Collection:", 
+	"window-media-closeafter": "close after adding",
+	"window-media-addedcol": "New asset created.",
+	"window-media-addedstage": "Media imported to stage.",
 	"window-media-addcol": "Set asset file",
 	"window-media-addshape": "Set new shape",
 	"window-media-addast": "Add as new asset",
@@ -895,11 +910,11 @@
 	"window-media-removefileer": "Error while removing the file.", 
 	"window-media-removewarn": "Are you sure you want to remove the selected item?", 
 	
-	"window-collectionadd-title": "Movie media collections",
+	"window-collectionadd-title": "Add from media collection",
 	"window-collection-title": "Manage scene collections",
 	"window-collection-cols": "Available collections",
-	"window-collectionadd-cols": "Available collections*",
-	"window-collectionadd-colsabout": "* this list does not show collections already used on current scene",
+	"window-collectionadd-cols": "Collections from other scenes",
+	"window-collectionadd-colscene": "Collections on current scene",
 	"window-collection-assets": "Collection assets",
 	"window-collection-remove": "Remove selected collection",
 	"window-collection-removea": "Remove selected asset",
@@ -1348,7 +1363,7 @@
 	"acinfo-intrandom-p1": "variable name to receive the result", 
 	"acinfo-intrandom-p2": "minimum value",
 	"acinfo-intrandom-p3": "maximum value",
-	"acinfo-intset": "set a int variable", 
+	"acinfo-intset": "set an int variable", 
 	"acinfo-intset-p1": "the variable name", 
 	"acinfo-intset-p2": "the value",
 	"acinfo-intsubtract": "subtract two int values", 
